# my-assistant

./: .gitignore  agent_tools.py  agents.py  app.py  pyproject.toml  requirements.txt  setup.py
pip-wheel-metadata/my_assistant-0.1.0.dist-info/: METADATA  top_level.txt
pip-wheel-metadata/my_assistant.egg-info/: SOURCES.txt  requires.txt
pip-wheel-metadata/speech_transcriber-0.1.0.dist-info/: METADATA
pip-wheel-metadata/speech_transcriber.egg-info/: PKG-INFO  SOURCES.txt
src/my_assistant/: agent_tools.py  agents.py
src/my_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
